syntax = "proto3";

option go_package = "github.com/huseyinbabal/microservices/shipping/internal/adapters/grpc/proto";

message CreateShippingRequest  {
  int64 user_id = 1;
  int64 order_id = 2;
}

message CreateShippingResponse {
  string message = 1;
}

service ShippingService {
  rpc CreateShipping(CreateShippingRequest) returns (CreateShippingResponse);
}